Fixing spacing on mobile

--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -159,7 +159,7 @@
 
 /* 48em = 768px */
 
-@media (min-width: 48em) {
+@media (min-width: 55em) {
   .header li {
     float: left;
   }
