--- a/src/containers/greeting/Greeting.scss
+++ b/src/containers/greeting/Greeting.scss
@@ -69,16 +69,16 @@
     transform: rotate(0deg);
   }
   10% {
-    transform: rotate(-10deg);
+    transform: rotate(20deg);
   }
   20% {
-    transform: rotate(12deg);
+    transform: rotate(-12deg);
   }
   30% {
-    transform: rotate(-10deg);
+    transform: rotate(0deg);
   }
   40% {
-    transform: rotate(9deg);
+    transform: rotate(0deg);
   }
   50% {
     transform: rotate(0deg);
