--- a/src/containers/skillProgress/Progress.scss
+++ b/src/containers/skillProgress/Progress.scss
@@ -29,9 +29,9 @@
 .skills-container {
   display: flex;
   width: 90%;
-  padding: 20px 10px;
+  padding: 10px 10px;
   margin: 0px auto;
-  margin-top: 2rem;
+  margin-top: 0rem;
 }
 .skills-container > * {
   flex: 1;
