--- a/src/containers/skills/Skills.scss
+++ b/src/containers/skills/Skills.scss
@@ -4,7 +4,7 @@
   display: flex;
   width: 100%;
   overflow: hidden;
-  margin-top: -40px;
+  padding: 10px 10px;
 }
 
 .skills-text-div {
