--- a/src/containers/splashScreen/SplashScreen.css
+++ b/src/containers/splashScreen/SplashScreen.css
@@ -11,13 +11,13 @@
 }
 
 .splash-title-container {
-  font-size: 2.5rem;
+  font-size: 2rem;
   text-decoration: none;
 }
+
 .splash-title {
   font-family: "Agustina Regular", cursive;
   font-weight: bold;
   font-variant-ligatures: no-common-ligatures;
   -webkit-font-variant-ligatures: no-common-ligatures;
-  padding: 0 20px;
 }
